--- a/DONDA_OS/DONDA_OS.vcxproj
+++ b/DONDA_OS/DONDA_OS.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="DONDA_OS.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="OS.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
