create struct user

--- a/DONDA_OS/DONDA_OS.vcxproj
+++ b/DONDA_OS/DONDA_OS.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="DONDA_OS.cpp" />
     <ClCompile Include="init.cpp" />
+    <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS.h" />
