--- a/DONDA_OS/DONDA_OS.vcxproj.filters
+++ b/DONDA_OS/DONDA_OS.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="init.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="user.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS.h">
