begin to manage block

--- a/DONDA_OS/DONDA_OS.vcxproj
+++ b/DONDA_OS/DONDA_OS.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlockManagement.cpp" />
     <ClCompile Include="DONDA_OS.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="user.cpp" />
