--- a/DONDA_OS/DONDA_OS.vcxproj.filters
+++ b/DONDA_OS/DONDA_OS.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="BlockManagement.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="operation_file.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS.h">
