--- a/DONDA_OS/DONDA_OS.vcxproj
+++ b/DONDA_OS/DONDA_OS.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BlockManagement.cpp" />
+    <ClCompile Include="cmd.cpp" />
     <ClCompile Include="DONDA_OS.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="operation_dir.cpp" />
