--- a/DONDA_OS/DONDA_OS.vcxproj.filters
+++ b/DONDA_OS/DONDA_OS.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="save.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ClipBoard.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS.h">
