--- a/DONDA_OS/DONDA_OS.vcxproj.filters
+++ b/DONDA_OS/DONDA_OS.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ClipBoard.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="link.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OS.h">
